--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.6",
     "react-switch": "^7.0.0",
+    "react-to-print": "^2.14.7",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
